# WoolseyWorkshop_CircuitPython_74HC165

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  setup.py  wws_74hc165.py
docs/: api.rst  api.rst.license  conf.py  examples.rst  examples.rst.license  index.rst  index.rst.license
examples/: 74hc165_bytes.py  74hc165_simpletest.py
