# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
# SPDX-FileCopyrightText: 2024 John Woolsey for Woolsey Workshop
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "woolseyworkshop-circuitpython-74hc165"
description = "CircuitPython driver for 74HC165 shift register."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Woolsey Workshop", email = "support@woolseyworkshop.com"}
]
urls = {Homepage = "https://github.com/WoolseyWorkshop/WoolseyWorkshop_CircuitPython_74HC165"}
keywords = [
    "adafruit",
    "blinka",
    "woolsey",
    "shift",
    "register",
    "74hc165",
    "hardware",
    "micropython",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["wws_74hc165"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
